Added more content

--- a/index.html
+++ b/index.html
@@ -16,24 +16,72 @@
         <ul>
           <li>She was born during a storm on Mount Targon.</li>
           <li>Her mother passed away soon after Diana was born.</li>
-          <li>The name 'Diana' was given by hunters from a Solari Temple who found her the day after she was born.</li>
+          <li>The name <em>Diana</em> was given by hunters from a Solari Temple who found her the day after she was born.</li>
           <li>As one of the Solari, Diana was raised to venerate the sun in all its aspects.</li>
           <li>She learned the legends of the sun and was trained by the Ra-Horak, the warrior templars of the Solari.</li>
           <li>Contrary to what the Solari elders taught, Diana grew interested in moonlight.</li>
-          <li>Diana found moonlight entrancing and beautiful in a way the harsh sun glaring down the mountain could never match.</li>
+          <li>Diana found the moonlight entrancing and beautiful in a way the harsh sun glaring down the mountain could never match.</li>
           <li>As the years went by, Diana found hereself ever at odds with the Solari elders and their teachings.</li>
-          <li>She couldn't help but question al she was told, always suspecting there was more that went unsaid in every teaching, as though what she was being taught was willfully incomplete.</li>
-          <li>As she grew, Diana's sense of isolation only became stronger as childhood friends distanced themselves from here.</li>
+          <li>She couldn't help but question all she was told, always suspecting there was more that went unsaid in every teaching, as though what she was being taught was willfully incomplete.</li>
+          <li>As she grew, Diana's sense of isolation only became stronger as childhood friends distanced themselves from her.</li>
           <li>With every passing day, Diana felt more alone and more certain that some vital aspect of her life remained unfulfilled.</li>
           <li>While sweeping the temple library as punishment for arguing with one of her elders, Diana discovered the partially burned pages of an ancient manuscript.</li>
-          <li>From the fragmentary text, Diana learned of an all-but-extinct group known as the Lunari, wose faith saw the moon as a source of life and balance.</li>
+          <li>From the fragmentary text, Diana learned of an all-but-extinct group known as the Lunari, whose faith saw the moon as a source of life and balance.</li>
         </ul>
 
         <figure class="text-center">
           <img class="img-responsive" src="http://vignette4.wikia.nocookie.net/leagueoflegends/images/7/7c/Diana_LunarGoddessSkin.png/revision/latest/scale-to-width-down/640?cb=20140109045756" alt="Diana dark Valkyrie skin">
-          <figcaption>Diana, Dark Valkyrie Skin</figcaption>
-          <figure>
+          <figcaption>Diana, Lunar Goddess Skin</figcaption>
+        </figure>
 
+        <ul>
+          <li>
+            While reading the Lunari text, Diana had a vision of herself helping an old woman climb Mount Targon.
+          </li>
+          <li>
+            Even though it was hard and exhausting, they both eventually made it to the top of the mountain, where the old woman disappeared, leaving Diana only with a bearskin cloak mantle on her shoulders.
+          </li>
+          <li>
+            It was at the top of the mountain that Diana found a sense of acceptance and purpose for her life.
+          </li>
+          <li>
+            On the way down the mountain, she found herself before a cave that would have been invisible had it not been for the moonlight.
+          </li>
+          <li>
+            Being in a fugue state and oblivious to her surroundings, Diana took refuge in the cave. </li>
+          <li>
+            In the cave, she found a cresent sword and a suit of armor unlike any other: a mail shirt of spun silver rings and a wondrously crafted warplate of polished steel.</li>
+          <li>
+            Diana reached out, and as her fingers touched the cold steel of the armor, her mind exploded with images of lives she had never lived, memories she had never experienced and sensations she had never known.</li>
+          <li> Scraps of ancient history raged like a blizzard in her mind; secret knowledge she but dimly grasped and innumerable futures scattered like wind-blown dust.
+          </li>
+          <li>
+            When the visions faded, Diana saw she was now fully clad in the silver warplate, armor that fitted her as though wrought especially for her. </li>
+          <li>Her mind was still afire with newly-acquired knowledge, but much of it remained frustratingly out of reach, like a picture half in shadow, half in light.</li>
+          <li>
+            Feeling vindicated with this new knowledge, Diana left the mountain cave and made her way unerringly towards the Solari Temple, knowing she had to tell the elders what she had learned. </li>
+          <li>
+            At the temple gates Leona, the master of the Ra-Horak and the Solari’s greatest warrior, brought Diana before the temple elders, who listened with mounting horror as she told of what she had learned of the Lunari.</li>
+          <li>
+            When she had finished her tale, the elders immediately denounced her as a heretic, a blasphemer and peddler of false gods. For such a heinous crime, only one punishment could suffice; death.</li>
+          <li>
+            Diana was appalled by how the elders rejected what was so patently true: revelations brought from the very summit of the holy mountain.</li>
+          <li>
+            Her fury built at their willful blindness, and blazing orbs of silver fire spun in the air around her. With a scream of rage-fueled frustration, Diana’s sword swept out, and where it struck, silver fire burned with killing light. </li>
+          <li>
+            The elders were died and Leona lay on her back, her armor smoking as though fresh from the forge.
+          </li>
+          <li>
+            Appalled at what she had done, Diana fled the site of the massacre, escaping into the wilds of Mount Targon as the Solari reeled from the savagery of her attack. </li>
+          <li>
+            Hunted by the warriors of the Ra-Horak, Diana now seeks to piece together the fragmentary memories of the Lunari hidden within her mind.
+          </li>
+          <li>
+            Driven by half-remembered truths and glimpses of ancient knowledge, Diana has only one truth to cling to — that the Lunari and the Solari need not be foes, that there is a greater destiny for her than that of a simple warrior.
+          </li>
+          <li>
+            What her destiny might be is unknown, but Diana will find it, whatever the cost. </li>
+        </ul>
       </section>
 
       <section class="part">
